--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Driver
+  uni: Foo
+  year: June, 2014 &mdash; January, 2099
   # awards:
-  # summary:
+  # summary: not important
